[gd_scene load_steps=15 format=3 uid="uid://bvolo3kio7hvp"]

[ext_resource type="Script" path="res://Scripts/Player/player_controller.gd" id="1_gm0ng"]
[ext_resource type="Texture2D" uid="uid://dtk8wj6d5rvfc" path="res://Sprites/temp_char_2.png" id="1_lwvrf"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerStateMachine.gd" id="3_5hoy1"]
[ext_resource type="Script" path="res://Scripts/Player/IdlePlayerState.gd" id="4_av1ch"]
[ext_resource type="Script" path="res://Scripts/Player/WalkingPlayerState.gd" id="5_8yyb6"]
[ext_resource type="Script" path="res://Scripts/Player/RunningPlayerState.gd" id="6_ns4y7"]
[ext_resource type="Script" path="res://Scripts/Player/DashingPlayerState.gd" id="7_ipt4f"]
[ext_resource type="PackedScene" uid="uid://dj4iol58m2slc" path="res://Scenes/scissorium.tscn" id="9_3g6f5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4b1el"]
size = Vector2(18.8, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tc16j"]
size = Vector2(88, 118)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0hbgn"]
bg_color = Color(0.886275, 0.0470588, 0.0745098, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wsywm"]
bg_color = Color(0.184314, 0.788235, 0.12549, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7j8dm"]
bg_color = Color(0.278431, 0.278431, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fmyrl"]
bg_color = Color(0.105882, 0.0784314, 0.952941, 1)

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("HURTBOX") groups=["player"]]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_gm0ng")
SPEED_DEFAULT = 100.0
ACCELERATION_RATE = 20.0
DECELERATION_RATE = 30.0
HURTBOX = NodePath("Hurtbox")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.999997, -2.86102e-06)
scale = Vector2(5, 5)
shape = SubResource("RectangleShape2D_4b1el")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(5, 5)
texture = ExtResource("1_lwvrf")

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("CURRENT_STATE")]
script = ExtResource("3_5hoy1")
CURRENT_STATE = NodePath("IdlePlayerState")

[node name="IdlePlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("4_av1ch")
ACCELERATION_RATE = 20.0
DECELERATION_RATE = 30.0

[node name="WalkingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("5_8yyb6")
ACCELERATION_RATE = 20.0
DECELERATION_RATE = 30.0

[node name="RunningPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("6_ns4y7")

[node name="DashingPlayerState" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("DASH_TIMER", "HURTBOX")]
script = ExtResource("7_ipt4f")
DASH_TIMER = NodePath("DashLength")
HURTBOX = NodePath("../../Hurtbox")

[node name="DashLength" type="Timer" parent="PlayerStateMachine/DashingPlayerState"]

[node name="PlayerCamera" type="Camera2D" parent="."]
zoom = Vector2(0.4, 0.4)
position_smoothing_enabled = true
position_smoothing_speed = 2.0

[node name="Hurtbox" type="Area2D" parent="." groups=["player_hurtbox"]]
collision_layer = 64
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_tc16j")
debug_color = Color(0.917647, 0.266667, 0.270588, 0.419608)

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -75.0
offset_top = -106.0
offset_right = 76.0
offset_bottom = -86.0
theme_override_styles/background = SubResource("StyleBoxFlat_0hbgn")
theme_override_styles/fill = SubResource("StyleBoxFlat_wsywm")
value = 100.0
show_percentage = false

[node name="Scissorium" parent="." instance=ExtResource("9_3g6f5")]

[node name="PlayerStaminaBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -74.0
offset_top = -129.0
offset_right = 74.0
offset_bottom = -115.0
theme_override_styles/background = SubResource("StyleBoxFlat_7j8dm")
theme_override_styles/fill = SubResource("StyleBoxFlat_fmyrl")
value = 100.0
show_percentage = false

[connection signal="timeout" from="PlayerStateMachine/DashingPlayerState/DashLength" to="PlayerStateMachine/DashingPlayerState" method="_on_dash_length_timeout"]
